--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.26.1",
     "css-loader": "^6.7.1",
     "ejs-loader": "^0.5.0",
     "file-loader": "^6.2.0",
